Thu Jun 13 00:33:49 2002  takuma ozawa  <metal@mine.ne.jp>

	* hash.c (rb_hash_s_create): use rb_hash_aset() instead of calling
	  st_insert() directly, to dup&freeze string keys.

Thu Jun 13 00:12:54 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (yylex): proper error message for "@@0".

	* parse.y (yylex): paren to parse_string() must be zero for
	  unparenthesized strings.

	* parse.y (str_extend): broken string when unterminated "#{".

Wed Jun 12 18:04:44 2002  akira yamada  <akira@arika.org>

	* uri/common.rb (REGEXP::PATTERN::X_ABS_URI): 'file:/foo' is valid.

	* uri/generic.rb (Generic#xxx=): should return substituted value.
	  (ruby-dev:16728.)

	* test/generic.rb (test_set_component): added tests for the above
	  change.

Wed Jun 12 15:00:57 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* parse.y (stmt): fix typo.

Wed Jun 12 01:10:40 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (singleton): "def (()).a end" dumped core.

	* parse.y (cond2): node may be null.

	* parse.y (match_gen): ditto.

Tue Jun 11 17:12:04 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (arg): void value check for "..", "...", "!", and "not".

	* parse.y (match_gen): void value check for "=~".

	* parse.y (value_expr): check NODE_AND and NODE_OR recursively.

	* parse.y (cond0): void value check added for conditionals.

Mon Jun 10 19:02:19 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* numeric.c (fix_lshift): negative shift count means right shift.
	  (ruby-bugs-ja:PR#248)

	* numeric.c (fix_rshift): return -1 when left side operand is
	  negative. (ruby-bugs-ja:PR#247)

	* parse.y (yylex): `0_' should be an error. (ruby-bugs-ja:PR#249)

Mon Jun 10 01:53:54 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): ruby_frame->last_func may be null, if it's
	  called outside of a method.

	* parse.y (arg): use INT2NUM, not INT2FIX for tUMINUS.

	* parse.y (arg): $1 may be null for tPOW.
